# ROBOTIS-THORMANG-MPC

./: .gitignore
ati_ft_sensor/: CHANGELOG.rst  CMakeLists.txt  _package.xml  package.xml
ati_ft_sensor/include/ati_ft_sensor/: ATIForceTorqueSensor.h  ATIForceTorqueSensorTWE.h  ati_force_torque_sensor.h  ati_force_torque_sensor_twe.h
ati_ft_sensor/src/: ATIForceTorqueSensorTWE.cpp  ati_force_torque_sensor_twe.cpp
imu_3dm_gx4/: CMakeLists.txt  package.xml
imu_3dm_gx4/launch/: imu.launch
imu_3dm_gx4/src/: imu.cpp  imu_3dm_gx4.cpp
motion_module_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
motion_module_tutorial/include/motion_module_tutorial/: motion_module_tutorial.h
motion_module_tutorial/src/motion_module_tutorial/: motion_module_tutorial.cpp
my_visualization_for_walking/: CMakeLists.txt  package.xml
my_visualization_for_walking/include/my_visualization_for_walking/: data_storage_tool.h
my_visualization_for_walking/src/: data_storage_tool.cpp  data_storage_tool_node.cpp
sensor_module_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensor_module_tutorial/include/sensor_module_tutorial/: sensor_module_tutorial.h
sensor_module_tutorial/src/sensor_module_tutorial/: sensor_module_tutorial.cpp
thormang3_action_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_action_module/include/thormang3_action_module/: action_file_define.h  action_module.h
thormang3_action_module/src/: action_module.cpp
thormang3_balance_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_balance_control/include/thormang3_balance_control/: thormang3_balance_control.h
thormang3_balance_control/src/: thormang3_balance_control.cpp
thormang3_base_module/: CHANGELOG.rst  CMakeLists.txt  _package.xml  package.xml
thormang3_base_module/data/: ini_pose.yaml
thormang3_base_module/include/thormang3_base_module/: BaseModule.h  JointState.h  RobotisCommon.h  RobotisState.h  Trajectory.h  Transformation.h  base_module.h  robotis_state.h
thormang3_base_module/src/: BaseModule.cpp  JointState.cpp  RobotisState.cpp  Trajectory.cpp  Transformation.cpp  base_module.cpp  robotis_state.cpp
thormang3_feet_ft_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_feet_ft_module/include/thormang3_feet_ft_module/: ThorMang3FeetForceTorqueSensorModule.h  feet_force_torque_sensor_module.h
thormang3_feet_ft_module/src/: ThorMang3FeetForceTorqueSensorModule.cpp  feet_force_torque_sensor_module.cpp  thormang3_feet_force_torque_sensor_module.cpp
thormang3_gripper_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_gripper_module/include/thormang3_gripper_module/: gripper_module.h
thormang3_gripper_module/src/: gripper_module.cpp
thormang3_head_control_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_head_control_module/include/thormang3_head_control_module/: HeadControlModule.h  head_control_module.h
thormang3_head_control_module/src/: HeadControlModule.cpp  head_control_module.cpp
thormang3_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_kinematics_dynamics/include/thormang3_kinematics_dynamics/: ThorMang3KinematicsDynamics.h  ThorMang3KinematicsDynamicsDefine.h  kinematics_dynamics.h  kinematics_dynamics_define.h  link_data.h
thormang3_kinematics_dynamics/src/: LinkData.cpp  ThorMang3KinematicsDynamics.cpp  kinematics_dynamics.cpp  link_data.cpp
thormang3_localization/: CMakeLists.txt  package.xml
thormang3_localization/include/thormang3_localization/: thormang3_localization.h
thormang3_localization/src/: main.cpp  thormang3_localization.cpp
thormang3_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_manager/config/: THORMANG3.robot  dxl_init.yaml  ft_calibration_data.yaml  ft_data.yaml  offset.yaml  wrist_ft_calibration_data.yaml
thormang3_manager/config/hand_configs/: THORMANG3_no_hands.robot  l_rh_p12_rn.robot  l_vt_hand.robot  r_rh_p12_rn.robot  r_vt_hand.robot
thormang3_manager/config/old/: THORMANG3.robot  dxl_init.yaml  ft_calibration_data.yaml  ft_data.yaml
thormang3_manager/launch/: thormang3_manager.launch  thormang3_manager_gazebo.launch  thormang3_manager_test.launch
thormang3_manager/src/: thormang3_manager.cpp
thormang3_manipulation_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_manipulation_module/config/: bimanual_demo.yaml  figure_demo.yaml  ik_weight.yaml  ini_pose.yaml
thormang3_manipulation_module/include/thormang3_manipulation_module/: JointState.h  ManipulationModule.h  RobotisCommon.h  RobotisData.h  RobotisLink.h  RobotisState.h  Trajectory.h  Transformation.h  manipulation_module.h  manipulation_module_state.h  robotis_state.h
thormang3_manipulation_module/src/: JointState.cpp  ManipulationModule.cpp  RobotisData.cpp  RobotisLink.cpp  RobotisState.cpp  Trajectory.cpp  Transformation.cpp  manipulation_module.cpp  manipulation_module_state.cpp  robotis_state.cpp
thormang3_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_walking_module/config/: balance_offset.yaml  ft_data.yaml
thormang3_walking_module/include/thormang3_walking_module/: ForceTorqueSensor.h  PreviewControlWalking.h  WalkingModule.h  WalkingModuleCommon.h  preview_control_walking.h  robotis_onlinel_walking.h  thormang3_online_walking.h  thormang3_walking_module.h  walking_module.h
thormang3_walking_module/src/: ForceTorqueSensor.cpp  LinearAlgebra.cpp  PreviewControlWalking.cpp  WaklingModule.cpp  WalkingModuleCommon.cpp  linear_algebra.cpp  preview_control_walking.cpp  robotis_online_walking.cpp  thormang3_online_walking.cpp  thormang3_wakling_module.cpp  wakling_module.cpp  walking_module.cpp
thormang3_wrist_ft_module/: CMakeLists.txt  package.xml
thormang3_wrist_ft_module/config/: wrist_ft_data.yaml
thormang3_wrist_ft_module/include/thormang3_wrist_ft_module/: ATIForceTorqueSensor.h  ThorMang3WristForceTorqueSensorModule.h  (+2 more)
thormang3_wrist_ft_module/src/: ATIForceTorqueSensor.cpp  ThorMang3WristForceTorqueSensorModule.cpp  wrist_force_torque_sensor_module.cpp  wrist_ft_sensor_module.cpp
(+88 files in other folders)
