<?xml version="1.0"?>
<package>
  <name>ati_ft_sensor</name>
  <version>0.0.0</version>
  <description>The ati_ft_sensor package</description>

  <maintainer email="hjsong@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>