<?xml version="1.0"?>
<package>
  <name>thormang3_balance_control</name>
  <version>0.0.0</version>
  <description>
    The thormang3_balance_control package
    This balance control is based on PD control.      
  </description>

  <maintainer email="hjsong@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  
  <run_depend>roscpp</run_depend>

</package>