<?xml version="1.0"?>
<package>
  <name>thormang3_head_control_module</name>
  <version>0.0.0</version>
  <description>The thormang3_head_control_module package</description>

  <maintainer email="kmjung@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="kmjung@robotis.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>robotis_device</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>
