<?xml version="1.0"?>
<package>
  <name>thormang3_kinematics_dynamics</name>
  <version>0.0.0</version>
  <description>The thormang3_kinematics_dynamics package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>
  <license>BSD</license>

  <author email="sch@robotis.com">sch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>